# Isaac-CoopModEnabler

./: .gitignore  README.md
.github/workflows/: build.yml
CoopModEnabler/: CMakeLists.txt  build.bat  build_zig.bat  check_imports.ps1  exports.def
CoopModEnabler/src/: dllmain.c  patcher.c  patcher.h  winmm_proxy.c  winmm_proxy.h
